<resources>
    <string name="app_name">Personal App</string>
    <string name="hello">Hello</string>
    <string name="tobias">Tobias</string>
    <string name="search_element">Search element</string>
    <string name="goals">Goals</string>
    <string name="finance">Finance</string>
    <string name="investment">Investment</string>
    <string name="house">House</string>
    <string name="trending">TRENDING</string>
    <string name="dummy_text">Whatever text goes here for anything you want but has maximium lines of 3. So yeah, thats it I guess.</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="house_monitoring">House Monitoring</string>
    <string name="esp_32_blk">ESP-32 BLK</string>
    <string name="new_sensor">New Sensor</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="last_connection">Last connection</string>
    <string name="thusday_1_dec_2021_12_00">Thusday, 1 Dec 2021 12:00</string>
    <string name="sensor_d2">Sensor D2</string>
    <string name="output">Output</string>
    <string name="sensor">Sensor</string>
    <string name="financial_record">Financial Record</string>
    <string name="record">Record</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="rp_0">Rp 0</string>
    <string name="temperature">Temperature</string>

    <string-array name="trxType">
        <item>PURCHASE</item>
        <item>INCOME</item>
        <item>INVESTMENT</item>
    </string-array>

    <string-array name="trxMethodSpinnerItems">
        <item>GOPAY</item>
        <item>OVO</item>
        <item>BCA</item>
        <item>CIMB NIAGA</item>
        <item>CASH</item>
    </string-array>
</resources>